# voiceAIhelpdesk

./: CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
deployment/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml
deployment/config/: redis.conf
deployment/grafana/: grafana.ini
deployment/grafana/dashboards/: dashboards.yml
deployment/grafana/datasources/: prometheus.yml
deployment/loki/: loki-config.yml
deployment/nginx/: nginx.conf
deployment/nginx/conf.d/: voicehelpdesk.conf
deployment/prometheus/: prometheus.yml
deployment/prometheus/rules/: voicehelpdesk.yml
deployment/promtail/: promtail-config.yml
docker/: nginx.conf
docs/technical/: api.md  architecture.md  configuration.md  database.md  deployment.md  release-readiness-checklist.md  troubleshooting.md
docs/user/: best-practices.md  faq.md  quick-start.md  walkthrough.md
examples/: audio_system_demo.py
frontend/: .env.example  README.md  package.json  tailwind.config.js  vite.config.ts
frontend/public/: audio-processor.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AudioRecorder.tsx  ConversationHistory.tsx  ErrorBoundary.tsx  Layout.tsx  LoadingOverlay.tsx  MetricsDashboard.tsx  Navigation.tsx  NotificationCenter.tsx  OfflineBanner.tsx  StatusIndicator.tsx  TicketSummary.tsx  TranscriptDisplay.tsx
frontend/src/components/audio/: AudioProcessorControls.tsx
frontend/src/components/dashboard/: AlertsPanel.tsx  CallVolumeChart.tsx  CategoryDistribution.tsx  LiveCallsTable.tsx  ResolutionTimeHistogram.tsx  UserSatisfactionGauge.tsx
frontend/src/components/testing/: AudioUploader.tsx  LatencyProfiler.tsx  ModelComparison.tsx  PromptTester.tsx  ScenarioPlayer.tsx
frontend/src/components/visualization/: ConfidenceScore.tsx  EntityHighlighter.tsx  IntentDisplay.tsx  SentimentIndicator.tsx  SuggestionsPanel.tsx  WaveformVisualizer.tsx
frontend/src/hooks/: useAccessibility.ts  useAudioProcessor.ts  useKeyboardShortcuts.ts  useLoading.ts  useOffline.ts  usePushToTalk.ts  useVoiceActivation.ts
frontend/src/lib/: socket.ts
frontend/src/pages/: ConversationPage.tsx  DashboardPage.tsx  HomePage.tsx  SettingsPage.tsx  TicketsPage.tsx
frontend/src/providers/: ThemeProvider.tsx
frontend/src/router/: AppRouter.tsx
frontend/src/store/: appStore.ts  conversationStore.ts
requirements/: base.txt  dev.txt  prod.txt
src/voicehelpdeskai/: __init__.py  main.py
src/voicehelpdeskai/api/: __init__.py  main.py  router.py  schemas.py
src/voicehelpdeskai/api/endpoints/: __init__.py  analytics.py  conversation.py  feedback.py  sse.py  ticket.py  upload.py  voice.py  websocket.py
src/voicehelpdeskai/api/middleware/: __init__.py  auth.py  logging.py  security.py
src/voicehelpdeskai/config/: __init__.py  config.py  examples.py  manager.py  model_config.yaml  validator.py
src/voicehelpdeskai/config/prompts/: system_prompts.json
src/voicehelpdeskai/core/: __init__.py  celery.py  config.py  logging.py  security.py
src/voicehelpdeskai/core/audio/: __init__.py  error_handler.py  exceptions.py  processor.py  queue_system.py  stream_manager.py  utils.py  vad.py
src/voicehelpdeskai/core/orchestrator/: __init__.py  conversation_orchestrator.py  metrics_collector.py  quality_controller.py  response_generator.py  ticket_builder.py
src/voicehelpdeskai/database/: __init__.py  base.py  manager.py  models.py  repositories.py  vectorstore.py
src/voicehelpdeskai/models/: __init__.py  audio.py  chat.py  user.py
src/voicehelpdeskai/monitoring/: __init__.py  alerting.py  grafana_dashboards.json  health_check.py  logging_system.py  metrics_collector.py  runbook.md
src/voicehelpdeskai/services/: __init__.py
src/voicehelpdeskai/services/llm/: __init__.py  conversation_manager.py  llm_manager.py  llm_service.py  mistral_service.py  prompt_manager.py
src/voicehelpdeskai/services/nlu/: __init__.py  dialogue_state_tracker.py  entity_extractor.py  intent_classifier.py  nlu_manager.py  problem_analyzer.py
src/voicehelpdeskai/services/stt/: __init__.py  continuous_stream.py  stt_manager.py  transcription_cache.py  transcription_processor.py  whisper_service.py
src/voicehelpdeskai/services/ticketing/: __init__.py  analytics.py  api_docs.md  mock_api.py  postman_collection.json  service.py  test_data.py
src/voicehelpdeskai/services/tts/: __init__.py  audio_stream.py  piper_service.py  tts_manager.py  tts_processor.py  voice_personalizer.py
src/voicehelpdeskai/workers/: __init__.py  celery_app.py  circuit_breaker.py  scheduled_tasks.py  task_monitor.py  task_result_storage.py  tasks.py  worker_manager.py
tests/: __init__.py
tests/services/ticketing/: __init__.py  test_ticketing_integration.py
